added some more parameters to show from the api

--- a/views/weather.erb
+++ b/views/weather.erb
@@ -10,6 +10,9 @@
   
   <p>Temperature: <%= @weather_data[:temperature] %>°C</p>
   <p>Description: <%= @weather_data[:description] %></p>
+  <p>Feels Like: <%= @weather_data[:feels_like] %>°C</p>
+  <p>Humidity: <%= @weather_data[:humidity] %>%</p>
+  <p>Wind Speed: <%= @weather_data[:wind_speed] %> m/s</p>
   
   <a href="/">Back to Search</a>
 </body>
