--- a/views/index.erb
+++ b/views/index.erb
@@ -3,15 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles.css">
   <title>Weather App</title>
 </head>
 <body>
-  <h1>Weather App</h1>
-  
-  <form action="/weather" method="post">
-    <label for="city">Enter City:</label>
-    <input type="text" id="city" name="city" required>
-    <button type="submit">Get Weather</button>
-  </form>
+  <div class="container">
+
+    <h1>Weather Finder</h1>
+    <br>
+    <form action="/weather" method="post">
+        <label for="city">Enter City:</label>
+        <input type="text" id="city" name="city" required>
+        <br>
+        <br>
+        <button class="btn" type="submit">Get Weather</button>
+    </form>
+
+  </div>
 </body>
 </html>
