--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/styles.css">
   <title>Weather App</title>
 </head>
-<body>
+<body class="mobile">
   <div class="container">
 
     <h1>Weather Finder</h1>
