--- a/views/styles.css
+++ b/views/styles.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: "Courier New", Courier, monospace;
 }
 
@@ -21,27 +20,25 @@ body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   color: #ffffff;
   background: linear-gradient(#404040, #282828);
+  max-width: 90vw;
 }
 
 input {
-  width: 100%;
-  padding: 10px;
   margin-bottom: 10px;
   margin-top: 10px;
   border: 1px solid #ffffff;
-  border-radius: 5px;
+  border-radius: 3px;
   background-color: #282828;
   color: #ffffff;
 }
 
 .btn {
-  display: inline-block;
   padding: 10px 20px;
-  background-color: #282828;
   color: #fff;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.2s;
+  background: linear-gradient(#404040, #282828);
 }
 
 .btn a {
@@ -50,8 +47,8 @@ input {
 }
 
 .btn:hover {
-  background-color: #181818;
   cursor: pointer;
+  background: linear-gradient(#303030, #232323);
 }
 
 .w_header {
@@ -59,11 +56,132 @@ input {
 }
 
 .weather_data {
-  text-align: left;
-  margin-bottom: 10px;
-  margin-right: auto;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  border: 2px solid #090909;
+  border-radius: 5px;
+  background: linear-gradient(#404040, #282828);
+  width: 375px;
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px 0 5px 0;
 }
 
 .weather_data p {
-  margin-bottom: 3px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.weather_data img {
+  margin: auto;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.forecast {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+}
+
+.day {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px;
+  padding: 10px;
+  height: 50px;
+  width: 215px;
+  border: 2px solid #090909;
+  border-radius: 4px;
+  background: linear-gradient(#404040, #282828);
+}
+
+.day p {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    max-width: 90vw;
+    width: 90vw;
+  }
+
+  .forecast {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+
+  .day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 215px;
+  }
+
+  .mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #121212;
+    height: auto;
+    margin-top: 50%;
+  }
+
+  .mobile_p2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #121212;
+    height: auto;
+  }
+
+  .weather_data {
+    text-align: center;
+    border: 2px solid #090909;
+    border-radius: 5px;
+    background: linear-gradient(#404040, #282828);
+    width: 275px;
+    margin: 0 auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+  }
+}
+
+/* galaxy fold */
+@media only screen and (max-width: 300px) {
+  .container {
+    max-width: 90vw;
+    width: 90vw;
+  }
+
+  .weather_data {
+    text-align: center;
+    border: 2px solid #090909;
+    border-radius: 5px;
+    background: linear-gradient(#404040, #282828);
+    width: 230px;
+    margin: 0 auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+  }
+
+  .container {
+    max-width: 100%;
+  }
 }
